** (2011-07-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update buffer size checks

** (2011-04-13) Release 3.1

** (2011-04-11) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Sanitize hostname/userdefkey in MySQL implementation
	- Fix weird bug when both sqlite and mysql support is requested

** (2011-04-11) Release 3.0

** (2011-04-11) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Fix reporting on existing entries in the database
	- Fix reporting on software installation (header mismatch)
	- Fix cpepart error in reporting (MySQL)
	- Update documentation and manual pages
	- Update MySQL to InnoDB and use foreign keys for referential
	  integrity

** (2011-04-10) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Improve CVE loadtime
	- Enhance pullcves to deduce dates rather than hardcode them
	- Updates on documentation and manual pages

** (2011-04-01) Sven Vermeulen <sven.vermeulen@siphos.be>
	- More MySQL support

** (2011-04-01) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Pull up fieldsize from 64 to 128 characters
	- Make sizes a bit more manageable
	- Drop some dead code

** (2011-03-24) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Start framework to support MySQL

** (2011-02-24) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Allow pullcves to pull information of 2011 too

** (2011-02-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Support watchlist (provide software titles not detected by
	  cvechecker)

** (2010-12-01) Release 2.0

** (2010-12-01) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Make scripts more generic (not Gentoo specific)

** (2010-11-27) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add manpages for scripts

** (2010-11-26) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Do not allow unquoted " characters in contentmatch
	- Add scripts to provide easier versions.dat rules 

** (2010-11-02) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add index on tb_cve for CPE data
	- Cleanup of code

** (2010-11-01) Sven Vermeulen <sven.vermeulen@siphos.be>