@@ -96,7 +96,7 @@ int sqlite_dbimpl_store_cve_in_db_exit(struct workstate * ws);
 int sqlite_dbimpl_store_cve_in_db_checkpoint(struct workstate * ws);
 
 // sqlite_dbimpl_store_cve_in_db - Add the selected CVE into the database
-int sqlite_dbimpl_store_cve_in_db(struct workstate * ws, char * cveId, char * cpeId);
+int sqlite_dbimpl_store_cve_in_db(struct workstate * ws, char * cveId, char * cpeId, char * cvssNum);
 
 // sqlite_dbimpl_add_versiongather - Add a versiongather entry into the database
 int sqlite_dbimpl_add_versiongather(struct workstate * ws, struct versiongather_data vg, struct cpe_data cpe);
