@@ -1,3 +1,6 @@
+** (2012-01-22) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Add CVSS scoring information to the report
+
 ** (2011-07-21) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Update buffer size checks
 
